Closed
Bug 578150
Opened 11 years ago
Closed 11 years ago
New crasher in 3.6.7, [@ nsGlobalWindow::DispatchDOMWindowCreated()], likely caused by bug 567357
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: christian, Assigned: sicking)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
476 bytes,
patch
|
mrbkap
:
review+
christian
:
approval1.9.2.7+
|
Details | Diff | Splinter Review |
Looks like the fix for bug 567357 introduced a new crash: http://crash-stats.mozilla.com/report/list?product=Firefox&version=Firefox%3A3.6.7&query_search=signature&query_type=exact&query=nsGlobalWindow%3A%3ADispatchDOMWindowCreated%28%29&date=07%2F12%2F2010%2013%3A19%3A07&range_value=1&range_unit=weeks&hang_type=any&process_type=any&plugin_field=&plugin_query_type=&plugin_query=&do_query=1&admin=&signature=nsGlobalWindow%3A%3ADispatchDOMWindowCreated%28%29 The comments seem to say it crashes when the slow script dialog is up.
Keywords: regression
Summary: New crasher in 3.6.7, likely caused by bug 567357 → New crasher in 3.6.7, [@ nsGlobalWindow::DispatchDOMWindowCreated()], likely caused by bug 567357
It's in the top 10, so marking as a blocker. We'll spin a build #2 for this.
blocking1.9.2: --- → .7+
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → jonas
Assignee | ||
Comment 2•11 years ago
|
||
This should do it. It seems like we're dropping our current document somewhere along the way.
Attachment #456937 -
Flags: review?(mrbkap)
Assignee | ||
Comment 3•11 years ago
|
||
The above patch should apply fine on the branches too.
Updated•11 years ago
|
Attachment #456937 -
Flags: review?(mrbkap) → review+
Comment on attachment 456937 [details] [diff] [review] Patch to fix a=LegNeato for 1.9.2.7. Please land on mozilla-1.9.2 default AND mozilla-1.9.2 GECKO1927_20100701_RELBRANCH
Attachment #456937 -
Flags: approval1.9.2.7+
Assignee | ||
Comment 5•11 years ago
|
||
Landed on m-c and 1.9.2 http://hg.mozilla.org/mozilla-central/rev/869c27d95189 http://hg.mozilla.org/releases/mozilla-1.9.2/rev/2502e5ae6981 http://hg.mozilla.org/releases/mozilla-1.9.2/rev/d6d2c572d791
status1.9.2:
--- → .7-fixed
![]() |
||
Updated•11 years ago
|
Comment 6•11 years ago
|
||
(In reply to comment #5) > Landed on m-c and 1.9.2 Marking fixed based on my assumption that not being marked fixed was an oversight - patch landed on m-c and this is marked fixed on branches.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Comment 7•11 years ago
|
||
I have an unminized testcase, that has the same end stack as this bug, but when reducing it further, I get the stacktrace from bug 574856.
Updated•10 years ago
|
Crash Signature: [@ nsGlobalWindow::DispatchDOMWindowCreated()]
Updated•2 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•