Bug 578150: Protect against the docshell loosing its document before we've had time to notify on it. r=mrbkap